@@ -10,7 +10,7 @@
   <tr> 
     <td width="21"> <h1></h1></td>
     <td width="885"> <font face="Verdana, Arial, Helvetica, sans-serif"><b><font size="6">Acknowledgements</font></b></font></td>
-    <td width="96"><a href="http://spirit.sf.net"><img src="theme/wave.gif" width="93" height="68" align="right" border="0"></a></td>
+    <td width="96"><a href="http://www.boost.org"><img src="theme/wave.gif" width="93" height="68" align="right" border="0"></a></td>
   </tr>
 </table>
 <br>
@@ -85,7 +85,7 @@ a policy based std::basic_string&lt;&gt; compatible string implementation.</p>
   License, Version 1.0. (See accompanying file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt) 
   </font> </p>
 <span class="updated">Last updated: 
-  <!-- #BeginDate format:fcAm1m -->Sunday, May 8, 2005  17:39<!-- #EndDate -->
+  <!-- #BeginDate format:fcAm1m -->Sunday, May 15, 2005  12:23<!-- #EndDate -->
 </span>
 </body>
 </html>
